2006-10-05  Werner Koch  <wk@g10code.com>

	* module.c (_gcry_module_id_new): Don't assign modules in the range
	the range of 1024..4096.
	* gcrypt.h (GCRY_MD_USER, GCRY_MD_USER_LAST): New
	(GCRY_PK_USER, GCRY_PK_USER_LAST): New.
	(GCRY_CIPHER_USER, GCRY_CIPHER_USER_LAST): New.

2006-10-12  Marcus Brinkmann  <marcus@g10code.de>

	* gcrypt.h.in: Replace socklen_t with gcry_socklen_t.

2006-10-11  Marcus Brinkmann  <marcus@g10code.de>

	* gcrypt.h.in: Replace version by @VERSION@.

2006-10-10  Marcus Brinkmann  <marcus@g10code.de>

	* gcrypt.h: Add fallback type for socklen_t.  Move to ...
	* gcrypt.h.in: ... this file.
	* Makefile.am (EXTRA_DIST): Add gcrypt.h.in.

2006-09-04  Werner Koch  <wk@g10code.com>

	* gcrypt.h: Removed some trailing comma in enums.

2006-08-29  Werner Koch  <wk@g10code.com>

	* global.c (gcry_xrealloc): Pass secure flag to outofcore handler.

	* gcrypt.h (GCRY_CIPHER_SEED): New.

2006-08-21  Werner Koch  <wk@g10code.com>

	* gcrypt.h (GCRYCTL_FAKED_RANDOM_P): New.

2006-07-29  Marcus Brinkmann  <marcus@g10code.de>

	* secmem.c (init_pool): Close FD after establishing the mapping.

2006-07-12  Marcus Brinkmann  <marcus@g10code.de>

	* ath.c (ath_mutex_destroy): Microoptimize destruction of unused
	statitically initialized mutexes.  Suggested by Victor Stinner
	<victor.stinner@inl.fr>.

	* gcrypt.h (GCRY_THREAD_OPTION_PTHREAD_IMPL,
	(GCRY_THREAD_OPTION_PTH_IMPL): Add missing initializers to
	suppress gcc warning.
	Submitted by Victor Stinner <victor.stinner@inl.fr>.

2006-07-04  Marcus Brinkmann  <marcus@g10code.de>

	* ath.c: Avoid warning about double defined type byte and other
	hacks to let it build for W32 (backported from LIBGCRYPT-1-2-BRANCH).
	* ath.h, gcrypt.h, tests/benchmark.c, src/types.h: Likewise.

	* gcrypt.h: Revert last change, and instead:
	[_WIN32 || __WIN32__]: Do not include <sys/socket.h>, but
	<winsock2.h> and <ws2tcpip.h>.
	Suggested by Simon Josefsson <jas@extundo.com>.
	